<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/g_background"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/pvpheading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/pvpheading"
                android:textSize="40sp"
                android:textStyle="bold" >
            </TextView>

            <Switch
                android:id="@+id/switch1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/infinite_chances"
                android:textOff="No"
                android:textOn="Yes" />

            <TextView
                android:id="@+id/asknamep1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="15dp"
                android:gravity="left"
                android:text="@string/namep1"
                android:textSize="26.7sp" />

            <EditText
                android:id="@+id/namep1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|left"
                android:hint="@string/askname"
                android:inputType="textPersonName"
                android:singleLine="true" >
            </EditText>

            <TextView
                android:id="@+id/asknamep2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="30dp"
                android:gravity="right"
                android:text="@string/namep2"
                android:textSize="26.5sp" />

            <EditText
                android:id="@+id/namep2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|right"
                android:hint="@string/askname"
                android:inputType="textPersonName"
                android:singleLine="true" >
            </EditText>

            <Button
                android:id="@+id/submit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/submit" />
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <com.google.android.gms.ads.AdView
            android:id="@+id/ad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-9242552638321460/4068311033" >
        </com.google.android.gms.ads.AdView>
    </RelativeLayout>

</LinearLayout>