<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/g_background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/cvpheading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/cvpheading"
        android:textSize="40sp" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cvpheading"
        android:layout_marginTop="30dp"
        android:text="@string/infinite_chances"
        android:textOff="No"
        android:textOn="Yes" />

    <TextView
        android:id="@+id/seek_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/switch2"
        android:layout_marginTop="30dp"
        android:text="@string/difficulty"
        android:textSize="23.5sp" />

    <SeekBar
        android:id="@+id/seeks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/seek_tv"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" />
    <Button
        android:id="@+id/button1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/seeks"
        android:layout_marginTop="17dp"
        android:gravity="center"
        android:text="@string/play" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <com.google.android.gms.ads.AdView
            android:id="@+id/ad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-9242552638321460/4068311033" >
        </com.google.android.gms.ads.AdView>
    </RelativeLayout>

</RelativeLayout>