<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/Linear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?android:attr/actionBarSize"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:id="@+id/gm"
        android:layout_height="70dp"
        android:text="@string/game"
        android:textColor="@color/Red"
        android:gravity="center_horizontal"
        style="@style/Shadow"
        android:textSize="29sp"
         />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2" >

        <Button
            android:id="@+id/button1p"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/p1"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button2p"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/p2"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <com.google.android.gms.ads.AdView
            android:id="@+id/ad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-9242552638321460/4068311033" >
        </com.google.android.gms.ads.AdView>
    </RelativeLayout>

</LinearLayout>