<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/mainlayout"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingTop="?android:attr/actionBarSize" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="3" >

            <TextView
                android:id="@+id/textView1"
                style="@style/Shadow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/Red"
                android:textSize="12.9pt" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2" >

                <TextView
                    android:id="@+id/nbulls"
                    style="@style/Shadow"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical|right"
                    android:textColor="@color/Blue"
                    android:textSize="16pt"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:id="@+id/bulls"
                    style="@style/Shadow"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bulls"
                    android:textColor="@color/Blue"
                    android:textSize="15pt" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="2" >

                <TextView
                    android:id="@+id/ncows"
                    style="@style/Shadow"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical|right"
                    android:textColor="@color/Blue"
                    android:textSize="16pt"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:id="@+id/cows"
                    style="@style/Shadow"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cows"
                    android:textColor="@color/Blue"
                    android:textSize="15pt" />
            </LinearLayout>

            <TextView
                android:id="@+id/enter_guess"
                style="@style/Shadow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/enter_guess"
                android:textColor="@color/Blue"
                android:textSize="13pt" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2" >

                <TextView
                    android:id="@+id/time"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/time"
                    android:textSize="8pt" />

                <Chronometer
                    android:id="@+id/chronometer1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:textSize="8pt" />
            </LinearLayout>

            <EditText
                android:id="@+id/input_guess"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/input_word" >
            </EditText>

            <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2" >

                <Button
                    android:id="@+id/guess"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/guess"
                    android:textColor="@color/Red" />

                <Button
                    android:id="@+id/giveup"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/give_up"
                    android:textColor="@color/Red" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>